# Arist-teles

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.vercel  PRODUCT.md  README.md  design.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/workflows/: deploy-azure.yml
.playwright-cli/: page-2026-07-15T05-04-18-471Z.yml  page-2026-07-15T05-06-36-556Z.yml  page-2026-07-15T05-22-13-969Z.yml  page-2026-07-15T05-33-09-206Z.yml  page-2026-07-15T05-39-30-530Z.yml
.playwright-mcp/: page-2026-07-15T20-27-30-607Z.yml  page-2026-07-15T20-27-49-856Z.yml  page-2026-07-15T20-28-08-611Z.yml  page-2026-07-15T20-29-09-378Z.yml  page-2026-07-15T20-29-18-610Z.yml  page-2026-07-15T20-29-35-216Z.yml  page-2026-07-15T20-30-02-768Z.yml  page-2026-07-15T20-30-18-451Z.yml  page-2026-07-15T20-30-26-002Z.yml  page-2026-07-15T20-31-10-217Z.yml  page-2026-07-15T20-32-32-173Z.yml  page-2026-07-15T20-48-26-057Z.yml  page-2026-07-15T20-48-54-161Z.yml  page-2026-07-15T20-49-16-380Z.yml
app/: globals.css  layout.tsx  page.tsx
app/agent/: page.tsx
app/chat/: page.tsx
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.vercel  README.md  pyproject.toml
backend/src/aristoteles/: __init__.py  agents.py  api.py  config.py  contracts.py  demo.py  evidence.py  extraction.py  insforge.py  pipeline.py  rag.py  reporting.py  roadmap.py  scoring.py  transcription.py  web_research.py
backend/src/aristoteles_api/: __init__.py  main.py
backend/src/aristoteles_api/core/: config.py  errors.py
backend/src/aristoteles_api/domain/: __init__.py  models.py  ports.py
backend/src/aristoteles_api/rag/: __init__.py  chunking.py
backend/tests/: test_agents.py  test_api_runtime.py  test_contracts.py  test_demo.py  test_evidence_decision.py  test_extraction.py  test_insforge_repository.py  test_pipeline.py  test_rag.py  test_reporting.py  test_roadmap.py  test_security.py  test_transcription.py  test_web_research.py
backend/tests/api/: test_health.py
backend/tests/unit/: test_chunking.py  test_config.py  test_migration_contract.py  test_models.py
components/agent/: AgentConsole.tsx
components/chat/: MarkdownAnswer.tsx  StructuredResponse.tsx
components/decision/: DecisionRoadmap.tsx
components/effects/: ScrollReveal.tsx
components/providers/: SmoothScroll.tsx
components/three/: SpaceScene.tsx
components/ui/: Button.tsx  DotClock.tsx  SectionLabel.tsx  ai-voice-input.tsx
docs/: ARCHITECTURE.md  PRD.md
lib/: aristoteles-contracts.ts  backend-api.ts  chat-store.ts  chat-types.ts  local-chat-store.ts  motion.ts  supabase.ts
migrations/: 20260715000000_create_rag_core.sql  20260715192004_aristoteles-foundation.sql  20260715193722_aristoteles-realtime-rls.sql  20260715200000_add_openai_rag_core.sql  20260715213000_create_chat_sessions.sql
pitch/: Aristoteles-Pitch.pptx  README.md  SOURCES.md  SPEAKER-NOTES.md  generate.mjs
sections/: About.tsx  CTA.tsx  ChatExperience.tsx  ChatPreview.tsx  FAQ.tsx  Footer.tsx  Header.tsx  Hero.tsx  Partners.tsx  Prizes.tsx  Speakers.tsx  Timeline.tsx  Tracks.tsx
supabase/: config.toml
supabase/migrations/: 20260715192004_aristoteles-foundation.sql  20260715193722_aristoteles-realtime-rls.sql  20260715200000_add_openai_rag_core.sql  (+2 more)
(+18 files in other folders)
