[project]
name = "aristoteles-api"
version = "0.1.0"
description = "Evidence-grounded RAG API for Aristoteles"
requires-python = ">=3.12,<3.15"
dependencies = [
  "deepagents>=0.3.0",
  "fastapi>=0.139,<0.140",
  "httpx>=0.28,<0.29",
  "langchain>=1.0,<2.0",
  "langchain-core>=1.0,<2.0",
  "langchain-openai>=1.3,<1.4",
  "langchain-text-splitters>=1.1,<1.2",
  "langsmith>=0.3.0",
  "openai>=2.45,<3",
  "pillow>=11.0,<12.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.14,<3",
  "pymupdf>=1.25,<2.0",
  "pytesseract>=0.3.13,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "tiktoken>=0.12,<1",
  "uvicorn[standard]>=0.51,<0.52",
  "weasyprint>=63,<70",
]

[dependency-groups]
dev = [
  "pytest>=9.1,<10",
  "pytest-asyncio>=1.3,<2",
  "respx>=0.23,<0.24",
  "ruff>=0.14,<0.15",
]

[build-system]
requires = ["hatchling>=1.28,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aristoteles", "src/aristoteles_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
